added header component

--- a/src/app/shared/components/default-header-info/default-header-info.component.html
+++ b/src/app/shared/components/default-header-info/default-header-info.component.html
@@ -1,1 +1,32 @@
-<p>default-header-info works!</p>
+<div class="header-top">
+    <div class="container dis-flex">
+        <ul class="header-top_connect">
+            <li>
+                <a href="tel: 01-8937402">
+                    <i class='bx bxs-phone-call icon'></i> 
+                    <p>090 000 000</p>
+                </a>
+            </li>
+            <li class="email-big">
+                <a href="mailto: dheyved1@gmail.com">
+                    <i class='bx bx-envelope icon'></i> 
+                    <p>mail</p>
+                </a>
+            </li>
+        </ul>
+        <ul class="header-top_socials">
+            <!-- <li class="email-mob">
+                <a href=""><i class='bx bx-envelope icon'></i></a>
+            </li> -->
+            <li>
+                <a href=""><i class='bx bxl-instagram icon'></i></a>
+            </li>
+            <li>
+                <a href=""><i class='bx bxl-facebook icon'></i></a>
+            </li>
+            <li>
+                <a href=""><i class='bx bxl-twitter icon'></i></a>
+            </li>
+        </ul>
+    </div>
+</div>
