--- a/src/app/shared/components/default-header/default-header.component.html
+++ b/src/app/shared/components/default-header/default-header.component.html
@@ -1,1 +1,32 @@
-<p>default-header works!</p>
+<div class="header-bottom">
+    <div class="container dis-flex">
+        <div class="logo" routerLink="/">
+            <img src="../../../../assets/img/moheen-logo.svg" alt="">
+        </div>
+        <nav>
+            <ul class="nav-list dis-flex">
+                <li class="nav-list_item" routerLink="/">
+                    Home
+                </li>
+                <li class="nav-list_item" >
+                    About
+                </li>
+                <li class="nav-list_item" routerLink="/products">
+                    Products
+                </li>
+                <li class="nav-list_item">
+                    Contact
+                </li>
+            </ul>
+        </nav>
+        <div class="header-bottom_right">
+            <ul class="dis-flex">
+                <li title="Search"><i class='bx bx-search-alt-2'></i></li>
+                <li title="Cart" class="cart">
+                    <i class='bx bx-shopping-bag'></i>
+                    <span class="counter">0</span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
