--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,24 +1,25 @@
 //-- Colors starts --//
 
-$primary100: #000F2D;
-$primary80: rgba(0, 15, 45, 0.8);
-$primary50: rgba(0, 15, 45, 0.5);
-$primary40: rgba(0, 15, 45, 0.4);
-$secondary100: #00B4CB;
-$black100: #000716;
+$primary1: #010066;
+$primary2: #323385;
+// $primary2: rgba(0, 15, 45, 0.8);
+// $primary3: rgba(0, 15, 45, 0.5);
+// $primary4: rgba(0, 15, 45, 0.4);
+$secondary1: #ff6301;
+$secondary2: #ff8531;
+$black1: #0c0c0c;
+$black2: #141414;
+$black3: #333333;
 $white-color: #ffffff;
-$success100: #039855;
-$error100: #e92c2c; 
-$warning100: #FACC15;
+$success1: #039855;
+$error1: #e92c2c; 
+$warning1: #FACC15;
+$brown: #54251c;
 
-$text-color1: #141414;
-$text-color2: #52525B;
-$text-color3: #949494;
 
-$grey1: #979797;
-$grey2: #F1F1F1;
-$grey3: #000F2D0D;
-$grey4: #F9F9F9;
+$grey1: #8c8c8c;
+$grey2: #a4a4a4;
+$grey3: #acacac;
 
 $inner-border: #CFCFD4;
 $divider-color1: #ECEDF1;
