added footer component

--- a/src/app/shared/components/default-footer/default-footer.component.html
+++ b/src/app/shared/components/default-footer/default-footer.component.html
@@ -1,1 +1,64 @@
-<p>default-footer works!</p>
+<footer class="footer">
+    <div class="container">
+        <div class="footer_list">
+            <div class="footer_list_item about">
+                <div class="logo">
+                    <img src="../../../../assets/img/moheen-logo-white.png" alt="">
+                </div>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique amet excepturi, cum possimus a in tempora iste quas consequuntur beatae officia officiis, mollitia molestias dolorum quia laudantium ipsam doloribus debitis!
+                </p>
+            </div>
+        
+            <!-- Posts -->
+            <div class="footer_list_item posts">
+              <h4 class="title uc">More info</h4>
+              <ul>
+                <li class="hover" routerLink="/about">About our company</li>
+                <li class="hover" routerLink="/services">Our services</li>
+                <li class="hover">
+                  <a
+                    href=""
+                    >Life-enriching tips</a
+                  >
+                </li>
+              </ul>
+            </div>
+        
+            <!-- Contact -->
+            <div class="footer_list_item contact">
+              <h4 class="title uc">Conatct Us</h4>
+              <ul class="contact-details">
+                <li>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea ipsam, Victoria Island Lagos
+                </li>
+                <li>
+                    <a href="tel: 01-8937402">(+234) 090 000 000</a>
+                </li>
+                <li>
+                    <a href="mailto: dheyved1@gmail.com">info@moheencollections.com</a>
+                </li>
+              </ul>
+            </div>
+        
+            <!-- Socials -->
+            <div class="footer_list_item social">
+                <h4 class="title uc">Social</h4>
+                <ul class="social_list dis-flex">
+                    <li class="social_list_item">
+                        <a href=""><i class='bx bxl-instagram icon'></i></a>
+                    </li>
+                    <li class="social_list_item">
+                        <a href=""><i class='bx bxl-facebook icon'></i></a>
+                    </li>
+                    <li class="social_list_item">
+                        <a href=""><i class='bx bxl-twitter icon'></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+      <!-- ABout -->
+    </div>
+  
+    <p class="copyright">COPYRIGHT © MOHEENCOLLECTIONS | {{ currentYear }} | ALL RIGHTS RESERVED.</p>
+  </footer>
