added home hero and about component

--- a/src/app/default/components/home-hero/home-hero.component.html
+++ b/src/app/default/components/home-hero/home-hero.component.html
@@ -1,1 +1,10 @@
-<p>home-hero works!</p>
+<section class="hero">
+    <div class="hero_header uc">
+        <p>Enjoy your shopping with us!</p>
+        <h2 class="title">Shopping at <span>Moheen Collections</span></h2>
+        <button class="btn prim_btn uc" routerLink="/products">Shop Now</button>
+    </div>
+    <div class="hero_more">
+        <span></span>
+    </div>
+</section>
