--- a/src/styles.scss
+++ b/src/styles.scss
@@ -136,6 +136,35 @@ textarea {
   }
 }
 
+// Heading and paragragh starts //
+h1 {
+  font-size: 44px;
+}
+h2 {
+  font-size: 34px;
+}
+h3 {
+  font-size: 24px;
+}
+h4 {
+  font-size: 22px;
+}
+h5 {
+  font-size: 20px;
+}
+h6 {
+  font-size: 18px;
+}
+p {
+  font-size: 18px;
+  font-weight: 500;
+}
+small {
+  font-size: 14px;
+
+}
+// Heading and paragragh ends //
+
 /* Section starts */
 .container {
   padding: 0 5%;
@@ -152,3 +181,44 @@ textarea {
   }
 }
 /* Section ends */
+
+/* Section flex starts */
+.mc_flex_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @media only screen and (max-width: 670px) {
+    display: grid;
+    grid-gap: $s-4;
+  }
+  &.row-reverse {
+    flex-direction: row-reverse;
+  }
+  .mc_flex_details {
+    flex-basis: 50%;
+    &_title {
+      margin-bottom: $s-2;
+    }
+    &_parags {
+      p {
+        &:not(:last-child) {
+          margin-bottom: $s-1;
+        }
+      }
+    }
+    .btn {
+      margin-top: $s-4;
+    }
+  }
+  .mc_flex_img {
+    flex-basis: 40%;
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: $s-2;
+      position: relative;
+    }
+  }
+}
+/* Section flex ends */
+
