added home contact component

--- a/src/app/default/components/home-contact/home-contact.component.html
+++ b/src/app/default/components/home-contact/home-contact.component.html
@@ -1,1 +1,69 @@
-<p>home-contact works!</p>
+<section class="contact sect">
+    <div class="container">
+        <div class="sect_header">
+            <h2>Contact Us</h2>
+            <p>Need any help? Do not hesitate to contact us</p>
+        </div>
+        <div class="contact_method">
+            <div class="contact_method_talk">
+                <h3 class="title">Talk to us</h3>
+                <form class="form">
+                    <div class="form_control">
+                        <label for="name">Your Name</label>
+                        <div class="form_control_input">
+                            <input type="text" id="name" placeholder="Name">
+                        </div>
+                    </div>
+                    <div class="form_control">
+                        <label for="email">Your Email</label>
+                        <div class="form_control_input">
+                            <input type="email" id="email" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form_control">
+                        <label for="message">Your Message</label>
+                        <div class="form_control_input">
+                            <textarea name="message" id="message" cols="10" rows="3" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+                    <div class="form_btn">
+                        <button class="btn prim_btn">Send</button>
+                    </div>
+                </form>
+            </div>
+            <div class="contact_method_info">
+                <h3 class="title">Contact information</h3>
+                <div class="contact_info_list">
+                    <div class="contact_info_list_item">
+                        <img src="../../../../assets/img/svg/location-yellow.svg" alt="icon" class="icon">
+                        <div class="contact_info_list_item_content">
+                            <h4 class="content_title">Our address</h4>
+                            <p>36 Adamu street, Lagos</p>
+                        </div>
+                    </div>
+                    <div class="contact_info_list_item">
+                        <img src="../../../../assets/img/svg/phone (1).svg" alt="icon" class="icon">
+                        <div class="contact_info_list_item_content">
+                            <h4 class="content_title">Phone number</h4>
+                            <p class="hover-1"><a href="tel: 01-8937402">090 000 000</a> </p>
+                        </div>
+                    </div>
+                    <div class="contact_info_list_item">
+                        <img src="../../../../assets/img/svg/at.svg" alt="icon" class="icon">
+                        <div class="contact_info_list_item_content">
+                            <h4 class="content_title">Email address</h4>
+                            <p class="hover-1"><a href="mailto: dheyved1@gmail.com">info@moheencollections.com</a></p>
+                        </div>
+                    </div>
+                    <div class="contact_info_list_item">
+                        <img src="../../../../assets/img/svg/clock.svg" alt="icon" class="icon">
+                        <div class="contact_info_list_item_content">
+                            <h4 class="content_title">Working hours</h4>
+                            <p>Mon - Sat 8: 00am - 9:00pm</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
