--- a/src/app/default/components/home/home.component.html
+++ b/src/app/default/components/home/home.component.html
@@ -1,4 +1,4 @@
 <app-home-hero></app-home-hero>
 <app-home-about></app-home-about>
-<app-home-products></app-home-products>
+<!-- <app-home-products></app-home-products> -->
 <app-home-contact></app-home-contact>
