--- a/src/styles.scss
+++ b/src/styles.scss
@@ -179,6 +179,14 @@ small {
   @media only screen and (max-width: 870px) {
     margin: 3rem 0;
   }
+  &_header {
+    text-align: center;
+    margin-bottom: $s-6;
+    p {
+      margin-top: $s-1;
+      color: $grey2;
+    }
+  }
 }
 /* Section ends */
 
