added home contact component

--- a/src/app/default/components/home/home-hero/home-hero.component.scss
+++ b/src/app/default/components/home/home-hero/home-hero.component.scss
@@ -1,8 +1,8 @@
-@import '../../../../assets/css/variables.scss';
-@import '../../../../assets/css/mixins.scss';
+@import '../../../../../assets/css/variables.scss';
+@import '../../../../../assets/css/mixins.scss';
 
 .hero {
-    background-image: url('../../../../assets/img/js_home_banner.jpg1_e7300144-aab1-4e92-bbc8-2e602ad56f8f_1400x.webp');
+    background-image: url('../../../../../assets/img/js_home_banner.jpg1_e7300144-aab1-4e92-bbc8-2e602ad56f8f_1400x.webp');
     background-position: center;
     // background-size: cover;
     width: 100%;
