--- a/src/app/default/components/home/home-about/home-about.component.scss
+++ b/src/app/default/components/home/home-about/home-about.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../assets/css/variables.scss';
-@import '../../../../assets/css/mixins.scss';
+@import '../../../../../assets/css/variables.scss';
+@import '../../../../../assets/css/mixins.scss';
 
 
 .mc_flex_content {
