--- a/src/app/default/components/home/home-contact/home-contact.component.scss
+++ b/src/app/default/components/home/home-contact/home-contact.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../assets/css/variables.scss';
-@import '../../../../assets/css/mixins.scss';
+@import '../../../../../assets/css/variables.scss';
+@import '../../../../../assets/css/mixins.scss';
 
 
 .contact_method { 
