--- a/src/assets/css/mixins.scss
+++ b/src/assets/css/mixins.scss
@@ -22,9 +22,6 @@
     border-radius: $border-radius2;
     background: $bac-col;
     transition: all .2s;
-    // &:hover {
-    //   border: 1px solid $blue;
-    // }
     input,
     textarea {
       width: 100%;
@@ -38,30 +35,24 @@
         color: $plac-col;
       }
     }
-    .icon {
-      font-size: 20px;
-      color: $grey1;
-      padding: $s-2;
-    }
   }
   
-  @mixin form-controls {
-    margin: $s-2 0;
-    display: grid;
-    grid-gap: $s-2;
-    label {
-      display: block;
-      margin-bottom: $s-1;
-    }
-    &_field {
-      .input-field {
-        @include input-field();
-        
-      }
-    }
-    &_btns {
-      .btn {
-        width: 100%;
-      }
-    }
-  }
+  // @mixin form-controls {
+  //   margin: $s-2 0;
+  //   display: grid;
+  //   grid-gap: $s-2;
+  //   label {
+  //     display: block;
+  //     margin-bottom: $s-1;
+  //   }
+  //   &_field {
+  //     .input-field {
+  //       @include input-field(); 
+  //     }
+  //   }
+  //   &_btns {
+  //     .btn {
+  //       width: 100%;
+  //     }
+  //   }
+  // }
