added home review component

--- a/src/app/default/components/home/home-reviews/home-reviews.component.html
+++ b/src/app/default/components/home/home-reviews/home-reviews.component.html
@@ -1,7 +1,22 @@
-<section class="reviews sect">
+<section class="review sect">
     <div class="container">
         <div class="sect_header">
-            
+            <h2>Reviews</h2>
+            <p>Hear what people say</p>
+        </div>
+        <div class="review_list">
+            <div class="review_list_item">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitorem ipsum dolor</p>
+                <h5 class="name"><i>Sandra Kingston</i></h5>
+            </div>
+            <div class="review_list_item">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitorem ipsum dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elitorem ipsum dolor</p>
+                <h5 class="name"><i>Barta Fierce</i></h5>
+            </div>
+            <div class="review_list_item">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitorem ipsum dolor</p>
+                <h5 class="name"><i>Drake Mishawn</i></h5>
+            </div>
         </div>
     </div>
 </section>
