--- a/src/app/shared/components/default-footer/default-footer.component.html
+++ b/src/app/shared/components/default-footer/default-footer.component.html
@@ -3,7 +3,7 @@
         <div class="footer_list">
             <div class="footer_list_item about">
                 <div class="logo">
-                    <img src="../../../../assets/img/moheen-logo-white.png" alt="">
+                    <img src="../../../../assets/img/moheen-logo-white-footer.svg" alt="">
                 </div>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique amet excepturi, cum possimus a in tempora iste quas consequuntur beatae officia officiis, mollitia molestias dolorum quia laudantium ipsam doloribus debitis!
