--- a/src/app/default/components/home/home.component.html
+++ b/src/app/default/components/home/home.component.html
@@ -2,4 +2,4 @@
 <app-home-about></app-home-about>
 <!-- <app-home-products></app-home-products> -->
 <app-home-reviews></app-home-reviews>
-<app-home-contact></app-home-contact>
+<app-home-contact id="contact"></app-home-contact>
