--- a/src/app/default/components/home/home.component.html
+++ b/src/app/default/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-home-hero></app-home-hero>
 <app-home-about></app-home-about>
-<!-- <app-home-products></app-home-products> -->
+<app-home-products></app-home-products>
 <app-home-reviews></app-home-reviews>
 <app-home-contact id="contact"></app-home-contact>
