--- a/src/app/shared/components/default-header/default-header.component.scss
+++ b/src/app/shared/components/default-header/default-header.component.scss
@@ -93,6 +93,9 @@
                     .icon {
                         font-size: 26px;
                     }
+                    @media only screen and (min-width: 670px) {
+                        display: none;
+                    }
                 }
             }
         }
