--- a/src/app/default/components/products/products.component.html
+++ b/src/app/default/components/products/products.component.html
@@ -1,1 +1,9 @@
-<p>products works!</p>
+<section class="products sect">
+    <div class="container">
+        <!-- <div class="sect_header">
+            <h2>Products</h2>
+            <p>Get all your need from here</p>
+        </div> -->
+        <app-display-products></app-display-products>
+    </div>
+</section>
