--- a/src/app/default/components/display-products/display-products.component.scss
+++ b/src/app/default/components/display-products/display-products.component.scss
@@ -43,3 +43,74 @@
         }
     }
 }
+
+// Modal starts //
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    padding: $s-4 $s-2;
+    background: rgba(35, 35, 35, 0.6);
+    display: flex;
+    z-index: 150;
+    transition: all 500ms ease-in-out;
+    overflow-y: scroll;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    &_area {
+        background-color: $white-color;
+        padding: $s-4;
+        border-radius: $border-radius1;
+        margin: auto;
+        // width: 300px;
+        box-shadow: $box-shadow2;
+        position: relative;
+        animation: slideIn 0.2s;
+        opacity: 0;
+        visibility: hidden;
+        &.show {
+            opacity: 1;
+            visibility: visible;
+        }
+        @media only screen and (max-width: 870px) {
+            width: 90%;
+        }
+        &_close {
+            position: absolute;
+            top: $s-2;
+            right: $s-3;
+            .icon {
+                font-size: 24px;
+                color: $primary2;
+                transition: all 0.2s ease-in;
+                padding: $s-1;
+                border-radius: 50%;
+                &:hover {
+                    color: $primary1;
+                    background: $divider-color1;
+                }
+            }
+        }
+    }
+}
+// Modal ends //
+
+
+// Key frames
+@keyframes slideIn {
+    0% {
+      transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -80, 0, 1);
+      opacity: 0;
+    }
+    100% {
+      transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+      opacity: 1;
+    }
+  }
