--- a/src/app/default/components/home/home-products/home-products.component.html
+++ b/src/app/default/components/home/home-products/home-products.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="sect_header">
             <h2>Products</h2>
-            <p>Get all your need from here</p>
+            <p>Get all you need from here</p>
         </div>
         <app-display-products></app-display-products>
 
