--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
 @import 'assets/css/variables.scss';
 @import 'assets/css/mixins.scss';
 
+// background: linear-gradient(to right, #87211c, #490249);
+
 *,
 *::before,
 *::after {
