--- a/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,9 +1,9 @@
 <div class="auth">
     <div class="auth_content">
       <div class="auth_content_header">
-        <p>Login to continue</p>
+        <p>Reset your account password here</p>
         <h2>
-          Welcome back Admin <img src="../../../../assets/img/auth/hi.svg" alt="image" />
+          Hello <img src="../../../../assets/img/auth/hi.svg" alt="image" />
         </h2>
       </div>
       <form class="form">
@@ -13,29 +13,17 @@
                 <input type="email" id="email" placeholder="Enter email">
             </div>
         </div>
-        <div class="form_control">
-            <label for="password">Password</label>
-            <div class="form_control_input dis-flex">
-                <input [type]="hide ? 'password' : 'text'" id="" placeholder="Enter password" />
-                <i
-                [class]="
-                  hide ? 'bx bx-show clickable icon' : 'bx bx-hide clickable icon'
-                "
-                (click)="hide = !hide"
-              ></i>
-            </div>
-        </div>
         <div class="form_btn">
           <button class="btn prim_btn clickable">
             <!-- <span *ngIf="loading">Loading...</span>
               <span *ngIf="!loading">Login</span> -->
-            Login
+            Send
           </button>
         </div>
     </form>
     <div class="auth_content_others">
-      <span class="clickable hover-1" routerLink="/auth/forgot-password"
-        >Forgot Password?</span
+      <span class="clickable hover-1" routerLink="/auth/login"
+        >Back to login</span
       >
     </div>
     </div>
