--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="form_btn">
-          <button class="btn prim_btn clickable">
+          <button class="btn prim_btn clickable" routerLink="/admin">
             <!-- <span *ngIf="loading">Loading...</span>
               <span *ngIf="!loading">Login</span> -->
             Login
