--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,3 +1,10 @@
+<!-- Alert -->
+<app-alert-popup
+  *ngIf="isAlert"
+  [text]="alertMessage"
+  [color]="alertColor"
+></app-alert-popup>
+
 <div class="auth">
     <div class="auth_content">
       <div class="auth_content_header">
@@ -6,17 +13,32 @@
           Welcome back Admin <img src="../../../../assets/img/auth/hi.svg" alt="image" />
         </h2>
       </div>
-      <form class="form">
+      <form class="form" [formGroup]="userForm" (ngSubmit)="login()">
         <div class="form_control">
             <label for="email">Email</label>
-            <div class="form_control_input">
-                <input type="email" id="email" placeholder="Enter email">
+            <div class="form_control_input" [ngClass]="{
+              'is-invalid': isFormSubmitted && userForm.controls.email.errors
+            }">
+                <input type="email" id="email" placeholder="Enter email" formControlName="email">
+            </div>
+            <div
+              class="form_control_message"
+              *ngIf="isFormSubmitted && userForm.controls.email.errors"
+            >
+              <small *ngIf="userForm.controls.email.errors.required"
+                >Email is required</small
+              >
+              <small *ngIf="userForm.controls.email.errors.email"
+                >Email is invalid</small
+              >
             </div>
         </div>
         <div class="form_control">
             <label for="password">Password</label>
-            <div class="form_control_input dis-flex">
-                <input [type]="hide ? 'password' : 'text'" id="" placeholder="Enter password" />
+            <div class="form_control_input dis-flex" [ngClass]="{
+              'is-invalid': isFormSubmitted && userForm.controls.password.errors
+            }">
+                <input [type]="hide ? 'password' : 'text'" id="" placeholder="Enter password" formControlName="password" />
                 <i
                 [class]="
                   hide ? 'bx bx-show clickable icon' : 'bx bx-hide clickable icon'
@@ -24,12 +46,22 @@
                 (click)="hide = !hide"
               ></i>
             </div>
+            <div
+              class="form_control_message"
+              *ngIf="isFormSubmitted && userForm.controls.password.errors"
+            >
+              <small *ngIf="userForm.controls.password.errors.required"
+                >Password is required</small
+              >
+              <small *ngIf="userForm.controls.password.errors.minlength"
+            >Your password must be at least 6 characters</small
+          >
+            </div>
         </div>
         <div class="form_btn">
-          <button class="btn prim_btn clickable" routerLink="/admin">
-            <!-- <span *ngIf="loading">Loading...</span>
-              <span *ngIf="!loading">Login</span> -->
-            Login
+          <button class="btn prim_btn" *ngIf="!loading">Login</button>
+          <button class="btn load_btn" *ngIf="loading" [disabled]="loading">
+            <app-loader></app-loader>
           </button>
         </div>
     </form>
