--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,23 @@
-<app-dashboard-header></app-dashboard-header>
-<app-dashboard-sidenav></app-dashboard-sidenav>
-<router-outlet></router-outlet>
+<div class="container-dash">
+    <app-dashboard-header
+      (hamClick)="toggleMenu()"
+      [isMenuOpen]="isMenuOpen"
+    ></app-dashboard-header>
+    <div class="container-dash_body">
+      <!-- Side Nav -->
+      <aside class="sidenav-area" [class.show-menu]="hamClick">
+        <div class="sidenav">
+          <app-dashboard-sidenav
+            (hamClick)="toggleMenu()"
+          ></app-dashboard-sidenav>
+        </div>
+      </aside>
+  
+      <!-- Main -->
+      <main [class.show-menu]="hamClick">
+        <div class="main-body">
+          <router-outlet></router-outlet>
+        </div>
+      </main>
+    </div>
+  </div>
